[gd_scene load_steps=13 format=2]

[ext_resource path="res://Items/MagicAbilities/FireBallCircle-sheet.png" type="Texture" id=1]
[ext_resource path="res://Items/MagicAbilities/FireBallCircle.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 23.6858

[node name="FireBallCircle" type="Area2D"]
collision_layer = 0
collision_mask = 24
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
frame = 2
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TickDamageTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="body_entered" from="." to="." method="_on_FireBallCircle_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_FireBallCircle_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TickDamageTimer" to="." method="_on_TickDamageTimer_timeout"]
